[project]
name = "deca_bloggers"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.1",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "ultimate-sitemap-parser>=1.6.0",
]

[project.scripts]
db = "deca_bloggers:deca_bloggers"

[tool.setuptools]
py-modules = ["deca_bloggers"]
